[build-system]
requires = ["setuptools", "wheel", "toml"]

[tool.black]
line-length = 120

[erl]
erl_dependencies = []
build_type = "Release"

[project]
name = "erl_cmake_tools"
version = "0.2.0"
description = "Python package for erl_cmake_tools"
authors = [
    { name = "Zhirui Dai", email = "daizhirui@hotmail.com" }
]
maintainers = [
    { name = "Zhirui Dai", email = "daizhirui@hotmail.com" }
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
dependencies = []
